--- a/app/src/main/res/layout/item_news.xml
+++ b/app/src/main/res/layout/item_news.xml
@@ -16,7 +16,7 @@
         />
 
     <TextView
-        android:layout_width="300dp"
+        android:layout_width="250dp"
         android:layout_height="130dp"
         android:id="@+id/text_news"
         app:layout_constraintStart_toEndOf="@id/image_news"
@@ -26,6 +26,7 @@
         android:textColor="@color/black"
         android:textSize="20sp"
         android:gravity="center"
+        android:background="#F3DDDD"
         />
 
     <ImageView
