--- a/app/src/main/res/layout/item_news.xml
+++ b/app/src/main/res/layout/item_news.xml
@@ -5,18 +5,18 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <ImageView
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="70dp"
+        android:layout_height="200dp"
         android:id="@+id/image_news"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="90dp"
+        android:layout_marginTop="40dp"
         android:layout_marginStart="10dp"
         />
 
     <TextView
         android:layout_width="250dp"
-        android:layout_height="130dp"
+        android:layout_height="180dp"
         android:id="@+id/text_news"
         app:layout_constraintStart_toEndOf="@id/image_news"
         android:layout_marginStart="10dp"
@@ -25,7 +25,7 @@
         android:textColor="@color/black"
         android:textSize="20sp"
         android:gravity="center"
-        android:background="#F3DDDD"
+        android:background="#F6F2F2"
         />
 
     <ImageView
